# wherehouse-os-

./: Agent05_OrderFulfillment_ProjectSpec.docx  Agent05_Qdrant_VectorDB_Spec.docx  README.md  TEST_CASES_BACKEND.md  TEST_CASES_FRONTEND.md  Warehouse_OS_Presentation.pptx  backend_qa_report.json  check_carriers.py  check_db.py  check_db2.py  check_order_status.py  check_orders.py  check_seed.py  create_slides.py  fix_status.py  fix_status2.py  frontend_qa_report.json  frontend_response.txt  package-lock.json  route_manual.py  route_order.py  route_order2.py  seed_data.py  seed_fc.py  test_api_error.py  update_orders.py
order-fulfillment-coordinator/apps/api/: Dockerfile  alembic.ini  fix_db.py  fulfillment.db  pyproject.toml  seed_all.py  test_api.py  test_query.py
order-fulfillment-coordinator/apps/api/alembic/: env.py
order-fulfillment-coordinator/apps/api/src/data/: settings_default.json
order-fulfillment-coordinator/apps/api/src/fulfillment/: config.py  database.py  main.py  vector_store.py  vector_store_mock.py
order-fulfillment-coordinator/apps/api/src/fulfillment/agents/: __init__.py  communication.py  cost_optimizer.py  monitor.py  orchestrator.py  prediction.py  rerouting.py  routing.py
order-fulfillment-coordinator/apps/api/src/fulfillment/api/: auth.py  chat.py  deps.py
order-fulfillment-coordinator/apps/api/src/fulfillment/guardrails/: address.py  carrier_diversity.py  cost.py  notifications.py  (+2 more)
order-fulfillment-coordinator/apps/api/tests/: advanced_evaluation_report.json  conftest.py  evaluation_report.json  test_50_cases.py  test_advanced_50.py
(+150 files in other folders)
